--- a/data/spells/abjuration-01-0fKHBh5goe2eiFYL.htm
+++ b/data/spells/abjuration-01-0fKHBh5goe2eiFYL.htm
@@ -9,4 +9,4 @@ Nom: Supprimer l’arôme
 ------ Description (fr) ------
 <p>La cible n’émet plus d’odeurs, ce qui empêche les créatures de repérer sa présence de manière passive grâce à leur seul odorat, que celui-ci soit précis ou imprécis. Une créature qui fait un test de Perception pour Chercher avec l’odorat ou d’autres sens peut remarquer l’absence d’odeurs naturelles. Si la cible a des pouvoirs liés à son odeur, comme une odeur entêtante, ces pouvoirs sont également neutralisés.</p>
 <hr />
-<p><strong>Intensifié (5e)</strong> La portée passe à 9 m et vous pouvez cibler jusqu’à 10 créatures.</p>
+<p><strong>Intensifié (5e)</strong> La portée passe à 9 mètres et vous pouvez cibler jusqu’à 10 créatures.</p>
