--- a/data/spells/abjuration-01-TTwOKGqmZeKSyNMH.htm
+++ b/data/spells/abjuration-01-TTwOKGqmZeKSyNMH.htm
@@ -9,4 +9,4 @@ Nom: Feuille morte
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Une créature vivante à portée est en train de chuter</p>
 <hr />
-<p>Grâce à vous, l’air lui-même interrompt une chute. La chute de la cible est ralentie à 18 m par round et la portion de chute couverte par la durée du sort ne compte pas lors du calcul des dégâts de chute. Si la cible touche le sol alors que le sort fait effet, elle ne subit aucun dégât de chute. Le sort se termine dès qu’elle atterrit.</p>
+<p>Grâce à vous, l’air lui-même interrompt une chute. La chute de la cible est ralentie à 18 mètres par round et la portion de chute couverte par la durée du sort ne compte pas lors du calcul des dégâts de chute. Si la cible touche le sol alors que le sort fait effet, elle ne subit aucun dégât de chute. Le sort se termine dès qu’elle atterrit.</p>
