--- a/data/spells/evocation-00-O9w7r4BKgPogYDDe.htm
+++ b/data/spells/evocation-00-O9w7r4BKgPogYDDe.htm
@@ -1,6 +1,6 @@
 Name: Produce Flame
 Nom: Flammes
-État: changé
+État: officielle
 
 ------ Description (en) ------
 <p>A small ball of flame appears in the palm of your hand, and you lash out with it either in melee or at range. Make a spell attack roll against your target's AC. This is normally a ranged attack, but you can also make a melee attack against a creature in your unarmed reach.</p>
