--- a/data/spells/evocation-03-X1b9ollVMSLXDN9o.htm
+++ b/data/spells/evocation-03-X1b9ollVMSLXDN9o.htm
@@ -1,7 +1,6 @@
 Name: Litany against Wrath
 Nom: Litanie contre la colère
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your litany rails against the sin of wrath, punishing the target for attacking good creatures. The target must attempt a Will save. A particularly wrathful creature, such as a wrath demon, uses the outcome one degree of success worse than the result of its saving throw. The target then becomes temporarily immune to all of your litanies for 1 minute.</p>
@@ -16,6 +15,6 @@ Nom: Litanie contre la colère
 <p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
 <p><strong>Succès</strong> La première fois que la cible utilise une action pour infliger des dégâts à au moins une créature d’alignement bon, la cible subit 3d6 dégâts bons.</p>
 <p><strong>Échec</strong> Chaque fois que la cible utilise une action pour infliger des dégâts à au moins une créature d’alignement bon, la cible subit 3d6 dégâts bons.</p>
-<p><strong>Échec critique</strong> La cible devient @Compendium[pf2e.conditionspf2e.MIRkyAjyBeXivMa7]{Affaiblie} 2. Chaque fois qu’elle utilise une action pour infliger des dégâts à au moins une créature d’alignement bon, la cible subit 3d6 dégâts bons.</p>
+<p><strong>Échec critique</strong> La cible devient @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaiblie} 2. Chaque fois qu’elle utilise une action pour infliger des dégâts à au moins une créature d’alignement bon, la cible subit 3d6 dégâts bons.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 1d6.</p>
