--- a/data/spells/evocation-03-sRfSBHWHdbIa0aGc.htm
+++ b/data/spells/evocation-03-sRfSBHWHdbIa0aGc.htm
@@ -1,7 +1,6 @@
 Name: Chilling Darkness
 Nom: Ténèbres glaciales
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You shoot an utterly cold ray of darkness tinged with unholy energy. Make a ranged spell attack against the target. You deal 5d6 cold damage, plus 5d6 evil damage if the target is a celestial.</p>
