--- a/data/spells/necromancy-05-nQS4vPm5zprqkzFZ.htm
+++ b/data/spells/necromancy-05-nQS4vPm5zprqkzFZ.htm
@@ -1,7 +1,6 @@
 Name: Curse of Death
 Nom: Malédiction de mort
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You focus your malevolent gaze on a target, causing their heart to seize in dread. The target must attempt a Fortitude saving throw. Regardless of the result, the target is temporarily immune to further castings of curse of death for 1 day.</p>
@@ -32,4 +31,4 @@ Nom: Malédiction de mort
 <p><strong>Stade 3</strong> [[/r 12d6 #négatifs]] dégâts négatifs et Fatigué (1 round);</p>
 <p><strong>Stade 4</strong> mort</p>
 <hr />
-<p><strong>Intensifié (+1)</strong> Augmentez les dégâts négatifs pris sur un succès et durant les premiers trois stades de la malédiction de [[/r 1d6 #négatifs]].</p>
+<p><strong>Intensifié (+1)</strong> Augmentez les dégâts négatifs subis en cas de succès et durant les trois premiers stades de la malédiction de [[/r 1d6 #négatifs]].</p>
