--- a/data/spells/evocation-02-0qaqksrGGDj74HXE.htm
+++ b/data/spells/evocation-02-0qaqksrGGDj74HXE.htm
@@ -1,7 +1,6 @@
 Name: Glitterdust
 Nom: Poussière scintillante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Creatures in the area are outlined by glittering dust. Each creature must attempt a Reflex save. If a creature has its invisibility negated by this spell, it is @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} instead of @Compendium[pf2e.conditionitems.zJxUflt9np0q4yML]{Invisible}. This applies both if the creature was already Invisible and if it benefits from new invisibility effects before the end of the invisibility negation effect from this spell.</p>
@@ -11,9 +10,9 @@ Nom: Poussière scintillante
 <p><strong>Failure</strong> The target is @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Dazzled} for 1 minute and its invisibility is negated for 1 minute.</p>
 <p><strong>Critical Failure</strong> The target is @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Blinded} for 1 round and Dazzled for 10 minutes. Its invisibility is negated for 10 minutes.</p>
 ------ Description (fr) ------
-<p>Une poussière scintillante dessine les contours des créatures de la zone. Chacune fait un jet de Réflexes. Si ce sort annule l’invisibilité d’une créature, elle est @Compendium[pf2e.conditionspf2e.DmAIPqOBomZ7H95W]{masquée} au lieu d’être @Compendium[pf2e.conditionspf2e.zJxUflt9np0q4yML]{invisible}. Cela fonctionne si la créature était déjà invisible ou si elle bénéficie d’un effet d’@Compendium[pf2e.conditionspf2e.zJxUflt9np0q4yML]{invisibilité} avant la fin de la négation d’invisibilité de ce sort.</p>
+<p>Une poussière scintillante dessine les contours des créatures de la zone. Chacune fait un jet de Réflexes. Si ce sort annule l’invisibilité d’une créature, elle est @Compendium[pf2e.conditionspf2e.DmAIPqOBomZ7H95W]{Masquée} au lieu d’être @Compendium[pf2e.conditionitems.zJxUflt9np0q4yML]{Invisible}. Cela fonctionne si la créature était déjà invisible ou si elle bénéficie de nouveaux effets d’invisibilité avant la fin de la négation d’invisibilité de ce sort.</p>
 <hr />
 <p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
 <p><strong>Succès</strong> L’invisibilité de la cible est annulée pour 2 rounds.</p>
-<p><strong>Échec</strong> La cible est @Compendium[pf2e.conditionspf2e.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 minute et son invisibilité annulée pendant 1 minute.</p>
-<p><strong>Échec critique</strong> La créature est @Compendium[pf2e.conditionspf2e.XgEqL1kFApUbl5Z2]{Aveuglée} pendant 1 round et Éblouie pendant 10 minutes. Son invisibilité est annulée pendant 10 minutes.</p>
+<p><strong>Échec</strong> La cible est @Compendium[pf2e.conditionitems.TkIyaNPgTZFBCCuh]{Éblouie} pendant 1 minute et son invisibilité annulée pendant 1 minute.</p>
+<p><strong>Échec critique</strong> La créature est @Compendium[pf2e.conditionitems.XgEqL1kFApUbl5Z2]{Aveuglée} pendant 1 round et Éblouie pendant 10 minutes. Son invisibilité est annulée pendant 10 minutes.</p>
