--- a/data/spells/evocation-03-oo7YcRC2gcez81PV.htm
+++ b/data/spells/evocation-03-oo7YcRC2gcez81PV.htm
@@ -1,7 +1,6 @@
 Name: Ki Blast
 Nom: Explosion Ki
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You unleash your ki as a powerful blast of force that deals 2d6 force damage.</p>
@@ -16,7 +15,10 @@ Nom: Explosion Ki
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 1d6, or by [[/r 2d6]] if you use 2 or 3 actions.</p>
 ------ Description (fr) ------
-<p>Vous déchaînez votre ki sous la forme d’une explosion infligeant 2d6 dégâts de force. Si vous utilisez 2 actions pour lancer explosion ki, la taille du cône passe à 9 m et les dégâts à 3d6. Si vous utilisez 3 actions pour lancer explosion ki, la taille du cône passe à 18 m et les dégâts à 4d6. Chaque créature dans la zone doit effectuer un jet de Vigueur.</p>
+<p>Vous déchaînez votre ki sous la forme d’une explosion infligeant [[/r 2d6 #force]] dégâts de force.</p>
+<p>Si vous utilisez 2 actions pour lancer explosion ki, la taille du cône passe à 9 m et les dégâts à [[/r 3d6 #force]].</p>
+<p>Si vous utilisez 3 actions pour lancer explosion ki, la taille du cône passe à 18 m et les dégâts à [[/r 4d6 #force]].</p>
+<p>Chaque créature dans la zone doit effectuer un jet de Vigueur.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature n’est pas affectée.</p>
 <p><strong>Succès</strong> La créature reçoit la moitié des dégâts.</p>
