--- a/data/spells/evocation-08-BKIet436snMNcnez.htm
+++ b/data/spells/evocation-08-BKIet436snMNcnez.htm
@@ -1,7 +1,6 @@
 Name: Polar Ray
 Nom: Rayon polaire
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You fire a blue-white ray of freezing air and sleet that deals 10d8 cold damage. Make a spell attack roll against the target.</p>
@@ -12,7 +11,7 @@ Nom: Rayon polaire
 ------ Description (fr) ------
 <p>Vous tirez un rayon blanc bleuté d’air glacial et de grésil tourbillonnant qui inflige 10d8 dégâts de froid. Vous devez réussir un jet d’attaque de sort pour affecter la cible.</p>
 <hr />
-<p><strong>Succès critique</strong> La cible subit double dégâts et est @Compendium[pf2e.conditionspf2e.4D2KBtexWXa6oUMR]{Drainée} 2.</p>
-<p><strong>Succès</strong> La cible subit les dégâts et est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée} 2</p>
+<p><strong>Succès critique</strong> La cible subit double dégâts et est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée} 2.</p>
+<p><strong>Succès</strong> La cible subit les dégâts et est Drainée 2</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 2d8.</p>
