--- a/data/spells/necromancy-01-BH3sUerzMb2bWnv1.htm
+++ b/data/spells/necromancy-01-BH3sUerzMb2bWnv1.htm
@@ -1,6 +1,6 @@
 Name: Call of the Grave
 Nom: Appel de la tombe
-État: changé
+État: officiel
 
 ------ Description (en) ------
 <p>You fire a ray of sickening energy. Make a spell attack roll.</p>
