--- a/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
+++ b/data/spells/necromancy-02-c3b6LdLlQDPngNIb.htm
@@ -1,7 +1,6 @@
 Name: Create Undead
 Nom: Création de mort-vivant
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You transform the target into an undead creature with a level up to that allowed in Table 7-1. There are many versions of this ritual, each specific to a particular type of undead (one ritual for all zombies, one for skeletons, one for ghouls, and so on), and the rituals that create rare undead are also rare. Some forms of undead, such as liches, form using their own unique methods and can't be created with a version of <em>create undead</em>.</p>
