--- a/data/spells/necromancy-04-eexkxcqnkXazsGfK.htm
+++ b/data/spells/necromancy-04-eexkxcqnkXazsGfK.htm
@@ -1,7 +1,6 @@
 Name: Enervation
 Nom: Affaiblissement
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Extending a finger, you fire a beam of negative energy that weakens the life force of any creature it touches. Each living creature in the line must attempt a Fortitude save.</p>
