--- a/data/spells/abjuration-02-02J0rDTk37KN2sjt.htm
+++ b/data/spells/abjuration-02-02J0rDTk37KN2sjt.htm
@@ -11,7 +11,7 @@ Nom: Éteindre
 ------ Description (fr) ------
 <p>Vous transformez l'air dans la zone en vapeur d'eau sursaturée.</p>
 <p>Les feux non magiques dans la zone sont automatiquement éteints. Les créatures du feu dans la zone subissent [[/r 4d8]] dégâts (Jet de Vigueur basique).</p>
-<p>Choisissez un feu magique, un sort de feu ou un objet de feu dans la zone et faites une tentative de contre. En cas de succès contre un objet, l'objet perd sa propriété de feu pendant 10 minutes (par exemple, une <em>@Compendium[pf2e.equipment-srd.LJdbVTOZog39EEbi]{epée longue} @Compendium[pf2e.equipment-srd.XszNvxnymWYRaoTp]{Enflammée} +1</em> devient une <em>épée longue +1</em>). Si la cible est un artefact ou un objet puissant similaire, votre tentative de contre échoue automatiquement.</p>
+<p>Choisissez un feu magique, un sort de feu ou un objet de feu dans la zone et faites une tentative de contre. En cas de succès contre un objet, l'objet perd sa propriété de feu pendant 10 minutes (par exemple, une <em>@Compendium[pf2e.equipment-srd.LJdbVTOZog39EEbi]{Épée longue} @Compendium[pf2e.equipment-srd.XszNvxnymWYRaoTp]{Enflammée} +1</em> devient une <em>Épée longue +1</em>). Si la cible est un artefact ou un objet puissant similaire, votre tentative de contre échoue automatiquement.</p>
 <p>Lorsque vous @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Maintenez ce sort}, vous pouvez changer la zone de vapeur n'importe où à portée, mais le seul effet quand vous le faites est d'éteindre automatiquement les feux non magiques.</p>
 <p>Si vous avez la réaction Contresort, pour pouvez utiliser <em>Éteindre</em> pour contrer tout sort avec le trait feu au lieu d'avoir besoin d'un sort de feu déclencheur préparé ou dans votre répertoire.</p>
 <hr />
