--- a/data/spells/necromancy-07-0jadeyQIItIuRgeH.htm
+++ b/data/spells/necromancy-07-0jadeyQIItIuRgeH.htm
@@ -1,7 +1,6 @@
 Name: Eclipse Burst
 Nom: Eclipse soudaine
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A globe of freezing darkness explodes in the area, dealing 8d10 cold damage to creatures in the area, plus 8d4 additional negative damage to living creatures. Each creature in the area must attempt a Reflex save. If the globe overlaps with an area of magical light or affects a creature affected by magical light, eclipse burst attempts to counteract the light effect.</p>
@@ -13,7 +12,7 @@ Nom: Eclipse soudaine
 <hr />
 <p><strong>Heightened (+1)</strong> The cold damage increases by 1d10 and the negative damage against the living increases by 1d4.</p>
 ------ Description (fr) ------
-<p>Un globe de ténèbres glacées explose dans la zone, infligeant 8d10 dégâts de froid aux créatures et objets, plus 8d4 dégâts négatifs supplémentaires aux créatures vivantes. Les objets et les créatures dans la zone font un jet de Réflexes. Si le globe se superpose sur une zone de lumière magique ou affecte une créature affectée par une lumière magique, éclipse soudaine tente de contrer l’effet de lumière.</p>
+<p>Un globe de ténèbres glacées explose dans la zone, infligeant 8d10 dégâts de froid aux créatures et objets, plus 8d4 dégâts négatifs supplémentaires aux créatures vivantes. Les objets et les créatures dans la zone font un jet de Réflexes. Si le globe se superpose sur une zone de lumière magique ou affecte une créature affectée par une lumière magique, Éclipse soudaine tente de contrer l’effet de lumière.</p>
 <hr />
 <p><strong>Succès critique</strong> La créature ou l’objet n’est pas affecté.</p>
 <p><strong>Succès</strong> La créature ou l’objet reçoit la moitié des dégâts.</p>
