--- a/data/spells/abjuration-04-5p8naLYjFcG13OkU.htm
+++ b/data/spells/abjuration-04-5p8naLYjFcG13OkU.htm
@@ -10,4 +10,4 @@ Nom: Barrière rebondissante
 <p>Vous élevez rapidement une barrière réfléchissante, réduisant les dégâts physiques et les faisant rebondir sur votre attaquant.</p>
 <p>Vous obtenez une résistance 10 contre un type de dégâts physique que l'attaque déclencheure inflige. Votre attaquant subit 5 dégâts du même type.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong> La résistance augmente de 2.Les dégâts inflifés à l'attaquant augmentent de 1.</p>
+<p><strong>Intensifié (+1)</strong> La résistance augmente de 2.Les dégâts infligés à l'attaquant augmentent de 1.</p>
