--- a/data/spells/abjuration-04-yY1H5zhO5dHmD8lz.htm
+++ b/data/spells/abjuration-04-yY1H5zhO5dHmD8lz.htm
@@ -13,6 +13,6 @@ Nom: Source de sérénité
 <p>Un fanal divin irradie la sérénité, réconfortant vos alliés proches.</p>
 <p>Les alliés dans la zone obtiennent un bonus de statut de +1 à leurs jets de sauvegarde contre les effets d'émotion</p> 
 <p>@Compendium[pf2e.spell-effects.Bc2Bwuan3716eAyY]{Effet : Source de sérénité}</p>
-<p>Un allié peut toucher la source au prix d'une action Interagir ; S'ils le font, le sort tente de contrer un effet d'émotion au choix de l'allié, après quoi cet effet d'émotion devient immunisé pendant 1 jour. Si le sort réussit le test de contre, il retire l'effet d'émotion de votre allié, mais pas des autres créatures que cet effet pourrait aussi être en train d'affecter.</p>
+<p>Un allié peut toucher la source au prix d'une action Interagir. S'ils le font, le sort tente de contrer un effet d'émotion au choix de l'allié, après quoi cet effet d'émotion devient immunisé pendant 1 jour. Si le sort réussit le test de contre, il retire l'effet d'émotion de votre allié, mais pas des autres créatures que cet effet pourrait aussi être en train d'affecter.</p>
 <hr />
 <p><strong>Intensifié (+4)</strong> Le bonus augmente de 1.</p>
