--- a/data/spells/abjuration-06-Er9XNUlL0wB0PM36.htm
+++ b/data/spells/abjuration-06-Er9XNUlL0wB0PM36.htm
@@ -25,4 +25,4 @@ Nom: Protection de domaine
 <p><strong>Échec</strong> Le rituel n'a pas d'effet.</p>
 <p><strong>Échec critique</strong> La zone devient piégée et vous est hostile ainsi qu'à vos alliés d'une manière que vous n'avez pas anticipée.</p>
 <hr />
-<p><strong>Intensifié (+1)</strong> La protection couvre une zone supplémentaire de 30 m × 30 m, jusqu'à 15 m de haut, qui doivent être contigus à la zone originelle.</p>
+<p><strong>Intensifié (+1)</strong> La protection couvre une zone supplémentaire de 30 mètres × 30 mètres, jusqu'à 15 mètres de haut, qui doivent être contigus à la zone originelle.</p>
