--- a/data/spells/necromancy-08-MS60WhVifb45qORJ.htm
+++ b/data/spells/necromancy-08-MS60WhVifb45qORJ.htm
@@ -1,7 +1,6 @@
 Name: Spiritual Epidemic
 Nom: Épidémie spirituelle
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You curse the target, sapping its spirit and leaving a contagious trap in its essence. The target must attempt a Will save. Any creature that casts a divine or occult spell on the target while it's affected is targeted by spiritual epidemic and must also attempt a Will save. The curse continues to spread in this way.</p>
