--- a/data/spells/necromancy-09-FEsuyf203wTNE2et.htm
+++ b/data/spells/necromancy-09-FEsuyf203wTNE2et.htm
@@ -1,7 +1,6 @@
 Name: Wail of the Banshee
 Nom: Plainte d'outre-tombe
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Your scream chills the souls of enemies that hear it. Each living enemy in the area takes 8d10 negative damage and must attempt a Fortitude save.</p>
@@ -16,5 +15,5 @@ Nom: Plainte d'outre-tombe
 <hr />
 <p><strong>Succès critique</strong> La cible n’est pas affectée.</p>
 <p><strong>Succès</strong> La cible reçoit la totalité des dégâts.</p>
-<p><strong>Échec</strong> La créature reçoit la totalité des dégâts et est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée} 4.</p>
-<p><strong>Échec critique</strong>La créature subit le double de dégâts et est @Compendium[pf2e.conditionspf2e.4D2KBtexWXa6oUMR]{drainée} 4.</p>
+<p><strong>Échec</strong> La créature reçoit la totalité des dégâts et est @Compendium[pf2e.conditionitems.4D2KBtexWXa6oUMR]{Drainée} [[/r 1d4]].</p>
+<p><strong>Échec critique</strong> La créature subit le double de dégâts et est Drainée 4.</p>
