--- a/data/spells/conjuration-03-g4MAIQodRDVfNp1B.htm
+++ b/data/spells/conjuration-03-g4MAIQodRDVfNp1B.htm
@@ -12,7 +12,7 @@ Nom: Blizzard personnel
 <hr />
 <p><strong>Heightened (+1)</strong> The cold damage and persistent cold damage increase by 1 (2 on a critical failure).</p>
 ------ Description (fr) ------
-<p>Vous invoquez un blizzard isolé de glace dissimulante et décapante qui suit votre cible. LA cible tente un jet de Vigueur.</p>
+<p>Vous invoquez un blizzard isolé de glace dissimulante et décapante qui suit votre cible. La cible tente un jet de Vigueur.</p>
 <hr />
 <p><strong>Succès critique</strong> LA cible n'est pas affectée.</p>
 <p><strong>Succès</strong> La cible subit [[/r 1d6 #froid]] dégâts de froid et le sort se termine.</p>
