--- a/data/spells/transmutation-01-K8vvrOgW4bGakXxm.htm
+++ b/data/spells/transmutation-01-K8vvrOgW4bGakXxm.htm
@@ -1,7 +1,6 @@
 Name: Dragon Claws
 Nom: Griffes de dragon
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Vicious claws grow from your fingers. They are finesse unarmed attacks that deal 1d4 slashing damage and 1d6 extra damage of a type determined by the dragon in your bloodline.</p>
@@ -43,31 +42,33 @@ Nom: Griffes de dragon
 ------ Description (fr) ------
 <p>Des griffes acérées poussent sur vos doigts. Ce sont des attaques à mains nues de finesse qui infligent 1d4 dégâts tranchants et 1d6 dégâts supplémentaires d’un type déterminé par le dragon correspondant à votre lignage.</p>
 <h2>Griffes de dragon</h2>
-<table style="user-select: text; width: 343px; color: #191813; font-size: 13px; height: 121px;" border="1">
-<tbody style="box-sizing: border-box; user-select: text;">
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; color: white; height: 17px; width: 173px; text-align: center; background-color: #522e2c;"><strong style="box-sizing: border-box; user-select: text;">Type de Dragon</strong></td>
-<td style="box-sizing: border-box; user-select: text; color: white; width: 169px; text-align: center; background-color: #522e2c; height: 17px;"><strong style="box-sizing: border-box; user-select: text;">Type de dégats</strong></td>
+<table class="pf2-table">
+<thead>
+<tr>
+<th>Type de dragon</th>
+<th>Type de dégpats</th>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 173px; text-align: center; background-color: #f6f1e1;">Noir ou Cuivre</td>
-<td style="box-sizing: border-box; user-select: text; width: 169px; text-align: center; background-color: #f6f1e1; height: 17px;">Acide</td>
+</thead>
+<tbody>
+<tr>
+<td>Cuivre ou Noir</td>
+<td>Acide</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 173px; text-align: center; background-color: #eee5c8;">Bleu ou Bronze</td>
-<td style="box-sizing: border-box; user-select: text; width: 169px; text-align: center; background-color: #eee5c8; height: 17px;"><span style="background-color: #f6f1e1;">Électricité</span></td>
+<tr>
+<td>Bleu ou Bronze</td>
+<td>Électricité</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 173px; text-align: center; background-color: #f6f1e1;">Airain, Or ou Rouge</td>
-<td style="box-sizing: border-box; user-select: text; width: 169px; text-align: center; background-color: #f6f1e1; height: 17px;"><span style="background-color: #eee5c8;">Feu</span></td>
+<tr>
+<td>Airain, Or ou Rouge</td>
+<td>Feu</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 19px;">
-<td style="box-sizing: border-box; user-select: text; height: 19px; width: 173px; text-align: center; background-color: #eee5c8;">Vert</td>
-<td style="box-sizing: border-box; user-select: text; width: 169px; text-align: center; background-color: #eee5c8; height: 19px;"><span style="background-color: #f6f1e1;">Poison</span></td>
+<tr>
+<td>Vert</td>
+<td>Poison</td>
 </tr>
-<tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; height: 17px; width: 173px; text-align: center; background-color: #f6f1e1;">Argent ou Blanc</td>
-<td style="box-sizing: border-box; user-select: text; width: 169px; text-align: center; background-color: #f6f1e1; height: 17px;">Froid</td>
+<tr>
+<td>Argent ou blanc</td>
+<td>Froid</td>
 </tr>
 </tbody>
 </table>
