--- a/data/spells/transmutation-01-mFHQ2u4LWiejqKQG.htm
+++ b/data/spells/transmutation-01-mFHQ2u4LWiejqKQG.htm
@@ -1,7 +1,6 @@
 Name: Overstuff
 Nom: Gaver
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Huge amounts of food and drink fill the target. It receives a full meal's worth of nourishment and must attempt a Fortitude save. A target @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Sickened} by this spell takes a -10-foot status penalty to its Speed until it's no longer Sickened.</p>
