--- a/data/spells/transmutation-03-gPvtmKMRpg9I9D7H.htm
+++ b/data/spells/transmutation-03-gPvtmKMRpg9I9D7H.htm
@@ -1,7 +1,6 @@
 Name: Earthbind
 Nom: Cloué à terre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Using the weight of earth, you hamper a target's flight, with effects based on its Fortitude save. If the creature reaches the ground safely, it doesn't take falling damage.</p>
