sorts transmutation changés

--- a/data/spells/transmutation-04-SDkIFrrO1PsE02Kd.htm
+++ b/data/spells/transmutation-04-SDkIFrrO1PsE02Kd.htm
@@ -1,7 +1,6 @@
 Name: Shifting Form
 Nom: Forme changeante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>You gain one of the following abilities of your choice. You can Dismiss this spell. </span></p>
