--- a/data/spells/transmutation-05-d9sBzPOXX3KT8uTu.htm
+++ b/data/spells/transmutation-05-d9sBzPOXX3KT8uTu.htm
@@ -1,7 +1,6 @@
 Name: Grisly Growths
 Nom: Horribles excroissances
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>This gruesome spell causes the target to grow excess limbs and organs, whether it be fingers multiplying until hands resemble bushes, eyes popping open in bizarre places, legs sprouting from the side of the body, or some other result. The target takes [[/r 10d6 #piercing]] piercing damage (basic Fortitude save) as the new features erupt. This spell has no effect on a target with a mutable anatomy or no limbs, such as an ooze or a protean. The growths rot rapidly and fall away after 1 round.</p>
@@ -14,8 +13,8 @@ Nom: Horribles excroissances
 <p><strong>Heightened (+1)</strong> The damage increases by [[/r 2d6 #piercing]].</p>
 ------ Description (fr) ------
 <p>Ce sort repoussant provoque la croissance de membres et d'organes en excès chez la cible, que ce soit des doigts se multipliant jusqu'à ce que des mains ressemblent à des buissons, des yeux apparaissant ouvert dans des lieux bizarres, des jambes ressortant du côté du corps ou d'autres résultats.</p>
-<p>La cible subit [[/r 10d6 #perforants]] dégâts perforants (jet de Vigueur basique) lorsque les nouveaux traits émergent. Ce sort n'a pas d'effet sur une cible avec une anatomie mutable ou qui n'a pas de membres, yel qu'une vase ou un protéen. Les excroissances pourissent rapidement et diminuent après 1 round.</p>
-<p>De plus, à moins que la cible initiale n'obtienne un succès critique, les créatures dans les 9 m de la cible, incluant la cible, doivent faire des jets de Volonté, après quoi ils sont temporairement immunisés à cet effet secondaire d'<em>horribles excroissances</em> pendant 1 heure. Cet effet supplémentaire est un effet mental et visuel.</p>
+<p>La cible subit [[/r 10d6 #perforants]] dégâts perforants (jet de Vigueur basique) lorsque les nouveaux traits émergent. Ce sort n'a pas d'effet sur une cible avec une anatomie mutable ou qui n'a pas de membres, tel qu'une vase ou un protéen. Les excroissances pourissent rapidement et diminuent après 1 round.</p>
+<p>De plus, à moins que la cible initiale n'obtienne un succès critique, les créatures dans les 9 m de la cible, incluant la cible, doivent faire des jets de Volonté, après quoi elles sont temporairement immunisées à cet effet secondaire d'<em>horribles excroissances</em> pendant 1 heure. Cet effet supplémentaire est un effet mental et visuel.</p>
 <hr />
 <p><strong>Succès</strong> La créature n'est pas affectée.</p>
 <p><strong>Échec</strong> La créature est @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1.</p>
