--- a/data/spells/transmutation-06-dN8QBNuTiaBHCKUe.htm
+++ b/data/spells/transmutation-06-dN8QBNuTiaBHCKUe.htm
@@ -1,7 +1,6 @@
 Name: Baleful Polymorph
 Nom: Métamorphose funeste
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You transform the target creature into a harmless animal appropriate to the area, with effects based on its Fortitude save.</p>
@@ -15,5 +14,5 @@ Nom: Métamorphose funeste
 <hr />
 <p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
 <p><strong>Succès</strong> Le corps de la cible est couvert de traits mineurs correspondant à l'animal inoffensif. Ses boyaux se tordent lorsqu'elle se transforme partiellement, la rendant @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1. Lorsqu'elle récupère de la condition Malade, ses caractéristiques reviennent à la normale.</p>
-<p><strong>Échec</strong> La cible se transforme pendant 1 minute mais conserve son esprit. Si elle passe toutes les actions de son tour à se concentrer sur sa forme originelle, elle peut essayer un jet de Volonté pour mettre un terme immédiatement à l'effet.</p>
+<p><strong>Échec</strong> La cible se transforme pendant 1 minute mais conserve son esprit. Si elle passe toutes les actions de son tour à se concentrer sur sa forme originelle, elle peut tenter un jet de Volonté pour mettre un terme immédiatement à l'effet.</p>
 <p><strong>Échec critique</strong> La cible est transformée en l'animal inoffensif choisi, corps et esprit, pour une durée illimitée.</p>
