--- a/data/spells/conjuration-04-iMmexY6ZosLS4I5R.htm
+++ b/data/spells/conjuration-04-iMmexY6ZosLS4I5R.htm
@@ -12,11 +12,11 @@ Nom: Porte vers l'au-delà
 <hr />
 <p><strong>Heightened (+1)</strong> The damage increases by 1d6.</p>
 ------ Description (fr) ------
-<p>Formée à partir de nulle part, vous créez une faille fine comme un cheveu dans une case adjacente qui mêne quelque part en dehors de la réalité. L'air s'engouffre à travers cette faille, attirant les créatures de taille Géante ou inférieure et les objets d'encombrement Léger ou inférieurs vers son centre. Les créatures de taille Géante ou inférieures dans la zone doivent faire un test de Vigueur au début de leur tour ; les créatures qui se déplacent dans la zone doivent faire leur jet en y entrant.</p>
+<p>Formée à partir de nulle part, vous créez une faille fine comme un cheveu dans une case adjacente qui mêne quelque part en dehors de la réalité. L'air s'engouffre à travers cette faille, attirant les créatures de taille Grande ou inférieure et les objets d'encombrement Léger ou inférieurs vers son centre. Les créatures de taille Grande ou inférieures dans la zone doivent faire un test de Vigueur au début de leur tour ; les créatures qui se déplacent dans la zone doivent faire leur jet en y entrant.</p>
 <p>Les failles de la <em>porte vers l'au-delà</em> sont trop fines pour que rien ne puissent réellement franchir le seuil pleinement, mais les effets de la décompression infligent 4d6 dégâts tranchants à toute créature ou objet qui termine son tour dans la case de la porte. Vous n'êtes pas affecté par votre propre <em>porte vers l'au-delà</em>. Vous pouvez Révoquer le sort.</p>
 <hr />
 <p><strong>Succès</strong> La créature n'est pas affectée.</p>
-<p><strong>Échec</strong> La créature est attirée de 3 m vers la porte.</p>
-<p><strong>Échec critique</strong> La créature est attirée de 6 m vers la porte.</p>
+<p><strong>Échec</strong> La créature est attirée de 3 mètres vers la porte.</p>
+<p><strong>Échec critique</strong> La créature est attirée de 6 mètres vers la porte.</p>
 <hr />
 <p><strong>Intensifié (+1)</strong> Les dégâts augmentent de 1d6.</p>
