--- a/data/spell-effects/01-N1EM3jRyT8PCG1Py.htm
+++ b/data/spell-effects/01-N1EM3jRyT8PCG1Py.htm
@@ -1,11 +1,10 @@
 Name: Spell Effect: Traveler's Transit (Climb)
 Nom: Effet : Voyageur en transit (Escalade)
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>Granted by @Compendium[pf2e.spells-srd.LrhTFHUtSS9ahogL]{Traveler's Transit}.</p>
 <p>You gain a climb speed equal to your land speed.</p>
 ------ Description (fr) ------
 <p>Accordé par @Compendium[pf2e.spells-srd.LrhTFHUtSS9ahogL]{Voyageur en transit}.</p>
-<p>Vous gagnez une Vitesse d'ascension égale à votre Vitesse sur terre</p>
+<p>Vous gagnez une Vitesse d'escalade égale à votre Vitesse sur terre</p>
