--- a/data/spell-effects/03-DENMzySYANjUBs4O.htm
+++ b/data/spell-effects/03-DENMzySYANjUBs4O.htm
@@ -38,7 +38,7 @@ Nom: Effet : Forme d'insecte (Mille-pattes)
 <li>CA = 18 + votre niveau. Ignorez la pénalité de contrôle et la réduction de vitesse de votre armure.</li>
 <li>10 points de vie temporaires.</li>
 <li>Vision nocturne.</li>
-<li>Une ou plusieurs attaques spécifiques à la forme de combat que vous choisissez, qui sont les seules attaques que vous pouvez utiliser. Vous'êtes entraîné à les utiliser. Votre modificateur d'attaque est de +13, et votre bonus de dégâts est de +2. Ces attaques sont basées sur la Force (pour les besoins de la condition @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli}). Si votre modificateur d'attaque à mains nues est plus élevé, vous pouvez l'utiliser à la place.</li>
+<li>Une ou plusieurs attaques spécifiques à la forme de combat que vous choisissez, qui sont les seules attaques que vous pouvez utiliser. Vous êtes qualifié dans leur utilisation. Votre modificateur d'attaque est de +13 et votre bonus aux dégâts est de +2. Ces attaques sont basées sur la Force (pour les besoins de la condition @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli}). Si votre modificateur d'attaque à mains nues est plus élevé, vous pouvez l'utiliser à la place.</li>
 <li>Modificateur d'athlétisme de +13, sauf si le vôtre est supérieur.</li>
 </ul>
 <p>Vous gagnez également des capacités spécifiques en fonction de la forme que vous choisissez :</p>
@@ -46,7 +46,7 @@ Nom: Effet : Forme d'insecte (Mille-pattes)
 <li><strong>Mille-pattes</strong>
 <ul>
 <li>Vitesse 7,50 mètres, Vitesse d'escalade 7,50 mètres; vision dans le noir;</li>
-<li><strong>Corps à cors</strong> Mandibules, <strong>Dégâts</strong> 1d8 perforants plus 1d4 poison persistant.</li>
+<li><strong>Corps à cors</strong> <span class="pf2-icon">1</span> Mandibules, <strong>Dégâts</strong> 1d8 perforants plus 1d4 poison persistant.</li>
 </ul>
 <hr />
 <p><strong>Intensifié (4e)</strong> Votre Taille de combat est Grande, et vos attaques ont une portée de 3 mètres. Vous devez disposer d'un espace suffisant pour vous étendre, sinon le sort est perdu. À la place, vous gagnez 15 PV temporaires, un modificateur d'attaque de +16, un bonus aux dégâts de +6, et un modificateur d'athlétisme de +16.</p>
