--- a/data/pathfinder-bestiary-3/OrO28a9h8kakTTj7.htm
+++ b/data/pathfinder-bestiary-3/OrO28a9h8kakTTj7.htm
@@ -1,6 +1,6 @@
 Name: Young Sovereign Dragon
-Nom: 
-État: aucune
+Nom: Jeune dragon souverain
+État: libre
 
 ------ Description (en) ------
 <p>Imperial dragons, namesake of the Dragon Empires and guardians of Tian Xia before humanity arrived, embody five strengthening and counteracting forces. Unlike other true dragons, imperial dragons dive deep into human affairs. Some remain secretive, posing as reclusive hermits, while others keep a high profile, openly ruling factions. Tian cultures in turn venerate the dragons, depicting gods in the form of dragons or claiming ancestry from them. Not all are adored, for plenty of these creatures act wickedly.</p>
