--- a/data/pathfinder-bestiary-3/JZMK7j7WGWlB3Jhw.htm
+++ b/data/pathfinder-bestiary-3/JZMK7j7WGWlB3Jhw.htm
@@ -1,6 +1,6 @@
 Name: Young Sea Dragon
-Nom: 
-État: aucune
+Nom: Jeune dragon de la mer
+État: libre
 
 ------ Description (en) ------
 <p>Imperial dragons, namesake of the Dragon Empires and guardians of Tian Xia before humanity arrived, embody five strengthening and counteracting forces. Unlike other true dragons, imperial dragons dive deep into human affairs. Some remain secretive, posing as reclusive hermits, while others keep a high profile, openly ruling factions. Tian cultures in turn venerate the dragons, depicting gods in the form of dragons or claiming ancestry from them. Not all are adored, for plenty of these creatures act wickedly.</p>
@@ -11,3 +11,10 @@ Nom:
 <p>Sea dragons&rsquo; affinity with water grants them mastery over rain, storms, and floods. Those whose livelihoods are at the mercy of the weather and waves frequently venerate these great aquatic creatures. Most sea dragons respond kindly to requests, but, like the sea, they can be unpredictable and fickle.</p>
 <p>Sea dragons have disk-shaped scales like fish and webbed claws as well as large back and tail fins to aid in swimming. They appear in vivid and vibrant colors, like aquatic wildlife. Underwater flora and fauna grow and thrive upon older sea dragons, and ancient sea dragons often have a head of coral around their antlers, giving them the image of being crowned royalty.</p>
 ------ Description (fr) ------
+<p>Les dragons impériaux, homonymes des Empires dragons et gardiens de Tian Xia avant l'arrivée de l'humanité, incarnent cinq forces de renforcement et de neutralisation. Contrairement aux autres vrais dragons, les dragons impériaux plongent profondément dans les affaires humaines. Certains restent secrets, se faisant passer pour des ermites reclus, tandis que d'autres gardent un profil élevé, dirigeant ouvertement des factions. Les cultures Tian vénèrent à leur tour les dragons, représentant des dieux sous la forme de dragons ou revendiquant leur ascendance. Tous ne sont pas adorés, car beaucoup de ces créatures agissent avec méchanceté.</p>
+<p>CYCLES DRACONIQUES</p>
+<p>Cinq éléments sous-tendent les pouvoirs magiques des dragons impériaux, influençant leurs relations avec toutes choses et, surtout, avec les autres de leur espèce. Ces éléments s'enchaînent en deux cycles. Dans le premier cycle, chaque élément se nourrit mutuellement : le bois nourrit le feu, le feu nourrit la terre, la terre nourrit le métal, le métal nourrit l'eau et l'eau nourrit le bois. Dans le second cycle, chaque élément en contrarie un autre : le bois contrarie la terre, la terre contrarie l'eau, l'eau contrarie le feu, le feu contrarie le métal, et le métal contrarie le bois.</p>
+<p>Chaque dragon impérial représente un élément et possède quatre capacités liées au cycle.Par exemple, le dragon de la forêt lié au bois -nourrit le feu, est nourri par l'eau, contrarie la terre et est contré par le métal.</p>
+<hr />
+<p>Les dragons du ciel vivent au-dessus des nuages, près des sommets des montagnes. Ils entretiennent une forte tradition religieuse, une pratique unique parmi les dragons impériaux qui les distingue autant que leurs ailes. Les âmes désespérées risquent des falaises abruptes et de la neige instable pour demander conseil à ces dragons, et la plupart des dragons du ciel aident volontiers ceux qui font le voyage, mais ils expulsent sans hésiter toute créature hostile ou tout harceleur</p>.
+<p>Les ailes du dragon du ciel ne sont pas de véritables ailes, mais de longues nageoires fusionnées à leurs avant-bras ; leurs écailles ne se forment également que très lentement. Les jeunes dragons s'enroulent étroitement dans leur tanière pendant qu'ils absorbent les minéraux qui colorent et durcissent leurs écailles. Même les adultes s'enroulent souvent autour des piliers, par habitude.</p>
