--- a/data/pathfinder-bestiary-3/1DzJjE7OnRDY5Pir.htm
+++ b/data/pathfinder-bestiary-3/1DzJjE7OnRDY5Pir.htm
@@ -1,9 +1,12 @@
 Name: Giant Opossum
-Nom: 
-État: aucune
+Nom: Opossum géant
+État: libre
 
 ------ Description (en) ------
 <p>Few creatures have survived as long and in as many environments as the opossum.</p>
 <hr />
 <p>Larger species of opossum can eat nearly anything human-sized or smaller.</p>
 ------ Description (fr) ------
+<p>Peu de créatures ont survécu aussi longtemps et dans autant d'environnements différents que l'opossum.</p>
+<hr />
+</p>Les plus grandes espèces d'opossums sont capables de manger presque tout, jusqu'à des créatures de taille humaine ou plus petit.<p>
