anadis état changé

--- a/data/ancestries/TQEqWqc7BYiadUdY.htm
+++ b/data/ancestries/TQEqWqc7BYiadUdY.htm
@@ -1,6 +1,6 @@
 Name: Anadi
-Nom: 
-État: aucune
+Nom: Anadi
+État: libre
 
 ------ Description (en) ------
 <p><em>Anadi people are reclusive, sapient spiders who hail from the jungles of southern Garund. Though they act in many ways like natural-born shapeshifters, their twin forms actually stem from carefully developed magic.</em></p>
