modification de nom

--- a/data/actions/0b3TTeQGFOiy6ykz.htm
+++ b/data/actions/0b3TTeQGFOiy6ykz.htm
@@ -1,5 +1,5 @@
 Name: Change Shape (Beastkin)
-Nom: Changement de forme (Beastkin)
+Nom: Changer de forme (Beastkin)
 État: libre
 
 ------ Description (en) ------
