--- a/data/actions/34E7k2YRcsOU5uyl.htm
+++ b/data/actions/34E7k2YRcsOU5uyl.htm
@@ -1,7 +1,9 @@
 Name: Change Shape (Anadi)
-Nom: 
-État: aucune
+Nom: Changer de forme (anadi)
+État: libre
 
 ------ Description (en) ------
 <p>You change into your human or spider shape. Each shape has a specific, persistent appearance. In your human shape, you can’t use unarmed attacks granted by your ancestry. In your spider shape, you aren’t flat-footed when climbing, but you can’t use weapons, shields, or other held items of any sort nor can you take any action that has the manipulate trait.</p>
 ------ Description (fr) ------
+<p>Vous prenez votre forme humanoïde ou d'araignée.</p>
+<p>Chaque forme possède sa propre apparence spécifique persistante. Sous votre forme humaine, vous ne pouvez pas utiliser les attaques à mains nues accordées par votre ascendance. Sous votre forme d'araignée, vous n'êtes par Pris au dépourvu lorsque vous escaladez mais vous ne pouvez pas utiliser d'armes, de boucliers ou d'autres objets tenus d'aucune sorte et vous ne pouvez pas entreprendre d'action ayant le trait manipulation.</p>
