--- a/data/actions/2EE4aF4SZpYf0R6H.htm
+++ b/data/actions/2EE4aF4SZpYf0R6H.htm
@@ -1,7 +1,6 @@
 Name: Pick a Lock
 Nom: Crocheter une serrure
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You're wearing or holding @Compendium[pf2e.equipment-srd.zvLyCVD8g2PdHJAc]{Thieves' Tools}</p>
@@ -14,7 +13,7 @@ Nom: Crocheter une serrure
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez ou portez des @Compendium[pf2e.equipment-srd.zvLyCVD8g2PdHJAc]{outils de voleur}</p>
 <hr />
-<p>Déverrouiller une serrure sans sa clef est très similaire au Désamorçage d’un dispositif mais le DD du test est déterminé par la complexité et la structure de la serrure que vous tentez de crocheter (les serrures et leur DD sont décrits à leurs descriptions). Les serrures de qualité supérieure peuvent nécessiter plusieurs succès pour parvenir à les déverrouiller car sinon, même un cambrioleur sans talent pourrait facilement ouvrir toutes les serrures en répétant ses tests jusqu’à obtenir un 20 naturel. Si vous ne disposez pas d’outils appropriés, le MJ peut vous autoriser à utiliser des outils improvisés, considérés comme des outils de mauvaise qualité, en fonction des spécificités de chaque serrure.</p>
+<p>Déverrouiller une serrure sans sa clef est très similaire au Désamorçage d’un dispositif mais le DD du test de <span data-pf2-action="pickALock" data-pf2-glyph="D">Vol</span> est déterminé par la complexité et la structure de la serrure que vous tentez de crocheter (les serrures et leur DD sont décrits à leurs descriptions). Les serrures de qualité supérieure peuvent nécessiter plusieurs succès pour parvenir à les déverrouiller car sinon, même un cambrioleur sans talent pourrait facilement ouvrir toutes les serrures en répétant ses tests jusqu’à obtenir un 20 naturel. Si vous ne disposez pas d’outils appropriés, le MJ peut vous autoriser à utiliser des outils improvisés, considérés comme des outils de mauvaise qualité, en fonction des spécificités de chaque serrure.</p>
 <hr />
 <p><strong>Succès critique</strong> Vous déverrouillez la serrure ou vous obtenez deux succès pour réussir à ouvrir une serrure complexe. Vous ne laissez aucune trace de votre manipulation.</p>
 </p><strong>Succès</strong> Vous déverrouillez la serrure ou vous obtenez un succès pour réussir à ouvrir une serrure complexe.</p>
