--- a/data/actions/bp0Up04x3dzGK5bB.htm
+++ b/data/actions/bp0Up04x3dzGK5bB.htm
@@ -1,7 +1,6 @@
 Name: Debilitating Strike
 Nom: Frappe incapacitante
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> Your Strike hits a flat-footed creature and deals damage</p>
@@ -20,3 +19,4 @@ Nom: Frappe incapacitante
 <li><strong>Handicap</strong> La cible reçoit un malus de statut de -3 m à ses Vitesses.</li>
 <li><strong>Handicap</strong> La cible devient @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaiblie} 1.</li>
 </ul>
+<p>@Compendium[pf2e.feature-effects.yBTASi3FvnReAwHy]{Effet: Frappe débilitante}</p>
