héritages des nouvelles ascendaces

--- a/data/feats/ancestry-05-1gAehVvstGY885kJ.htm
+++ b/data/feats/ancestry-05-1gAehVvstGY885kJ.htm
@@ -11,3 +11,4 @@ PrereqFR:
 <p><strong>Special</strong> If you have the Barbed Quills reaction or a quills unarmed attack, each gains a +1 circumstance bonus to damage rolls until the start of your next turn.</p>
 <p><em>Note: +1 to Barbed Quills is not automated</em></p>
 ------ Description (fr) ------
+Piquants
