--- a/data/actions/oAWNluJaMlaGysXA.htm
+++ b/data/actions/oAWNluJaMlaGysXA.htm
@@ -1,5 +1,5 @@
 Name: Barbed Quills
-Nom: Hampes barbelés
+Nom: Piquants barbelés
 État: libre
 
 ------ Description (en) ------
@@ -15,7 +15,7 @@ Nom: Hampes barbelés
 <p><strong>Fréquence</strong> une fois par jour</p>
 <p><strong>Déclencheur</strong> Vous êtes touché par une Frappe à mains nues ou une frappe avec une arme au corps à corps sans allonge.</p>
 <hr />
-<p>Vos hampes se brisent dans la peau de votre attaquant. Vous infligez [[/r 1d8 #perforants]] dégâts perforants à la créature déclencheuse (jet de Réflexe basqieu contre le plus élevé entre votre DD de classe ou votre DD de sort). Sur un échec critique, la créature subit aussi [[/r 1d4 #saignement persistant]] dégâts de saignement persistant lorsque vos hampes se fichent dans sa peau. Au niveau 3 et chaque niveau impair par la suite, ces dégâts augmentes d'1d8 et les dégâts perforants persistants augmentent de 1.</p>
+<p>Vos piquants se brisent dans la peau de votre agresseur. Vous infligez [[/r 1d8 #perforants]] dégâts perforants à la créature déclencheuse (jet de Réflexe basqieu contre le plus élevé entre votre DD de classe ou votre DD de sort). Sur un échec critique, la créature subit aussi [[/r 1d4 #saignement persistant]] dégâts de saignement persistant lorsque vos piquants se fichent dans sa peau. Au niveau 3 et chaque niveau impair par la suite, ces dégâts augmentent d'1d8 et les dégâts perforants persistants augmentent de 1.</p>
 <p>dégâts perforants [[/r ceil(@details.level.value/2)d8 #piercing]]{selon le niveau}</p>
 <p>dégâts de saignement persistants [[/r 1d4+ceil(@details.level.value/2)-1 #saignement persistant]]{selon le niveau}</p>
 <hr />
