--- a/data/ancestryfeatures/feat-01-iW6UN722ERvurAl1.htm
+++ b/data/ancestryfeatures/feat-01-iW6UN722ERvurAl1.htm
@@ -1,7 +1,8 @@
 Name: Swim (Mistbreath Azarketi)
-Nom: 
-État: aucune
+Nom: Nage (Azarketi soufflebrume)
+État: libre
 
 ------ Description (en) ------
 <p>Mistbreath Azarketi get a base Swim speed of 15.</p>
 ------ Description (fr) ------
+<p>Un azarketi souffle brume obtient une vitesse de natation de 4,5 m.</p>
