--- a/data/pathfinder-bestiary-3/324ZRtmDYulbw0CM.htm
+++ b/data/pathfinder-bestiary-3/324ZRtmDYulbw0CM.htm
@@ -1,5 +1,5 @@
 Name: Lifeleecher Brawler
-Nom: Taxeur de vie (Mortique)
+Nom: Bagarreur Taxe-vie (Mortique)
 État: libre
 
 ------ Description (en) ------
@@ -14,5 +14,5 @@ Nom: Taxeur de vie (Mortique)
 </p>Les Mortiques sont en grande partie nouveaux sur Golarion, la plupart ayant été créés en masse lorsque le Tyran des Murmures a détruit des villes entières avec son Feu Radieux, une explosion magique alimentée par la collision d'énergie négative et positive. Parmi les cadavres de ces tragédies sont apparus des Mortiques, des survivants vivants pris pour des cadavres qui ont été laissés pour mort. Ils se sont retrouvés dans un état crépusculaire, ni pleinement vivants ni morts-vivants. Les polluants nécrotiques des Gravelands et de l'île de la Terreur continuent de créer des Mortiques, s'infiltrant dans les terres voisines par l'air, la terre et l'eau pour infecter la population. Bien que la plupart des vivants de ces terres craignent d'être transformés, certains pensent que devenir un Mortique est leur meilleure chance de survie face à l'envahissement des hordes de morts.</p> 
 <p>Les pouvoirs d'un Mortique diffèrent selon son ascendance, bien qu'ils aient quelques points communs. Lire ou entendre les textes sacrés leur donne des maux de tête, et ils éprouvent un grand malaise lorsqu'ils foulent un sol sacré. Pour ceux qui étaient religieux dans la vie, ces nouveaux changements peuvent être dévastateurs.</p>
 <hr />
-<p>Les Taxeurs de vie sont des orcs Mortiques à la chair grise, aux griffes acérées et aux défenses saillantes. Résistants et forts, ils dévorent l'essence vitale de leurs ennemis, ce qui guérit leurs blessures et enchaîne l' âme au Taxeur de vie.</p>
-<p>Beaucoup d'orcs croient que les Taxeurs de vie sont possédés par les esprits de guerriers orcs tombés au combat et trop têtus pour mourir. Redoutés et vénérés, les Taxeurs de vie s'élèvent souvent à des postes de pouvoir dans leurs clans et combattent en première ligne contre les armées de morts-vivants du Tyran qui Murmure.</p> 
+<p>Les Taxes-vie sont des orcs Mortiques à la chair grise, aux griffes acérées et aux défenses saillantes. Résistants et forts, ils dévorent l'essence vitale de leurs ennemis, ce qui guérit leurs blessures et enchaîne l' âme au Taxeur de vie.</p>
+<p>Beaucoup d'orcs croient que les Taxes-vie sont possédés par les esprits de guerriers orcs tombés au combat et trop têtus pour mourir. Redoutés et vénérés, les Taxes-vie s'élèvent souvent à des postes de pouvoir dans leurs clans et combattent en première ligne contre les armées de morts-vivants du Tyran qui Murmure.</p> 
