--- a/data/classfeatures/sorcerer-01-2goYo6VNbwC6aKF1.htm
+++ b/data/classfeatures/sorcerer-01-2goYo6VNbwC6aKF1.htm
@@ -25,6 +25,7 @@ Nom: Lignages
 <ul>
 <li><strong>@Compendium[pf2e.classfeatures.3qqvnC2U8W26yae7]{Aberrant}</strong> une étrange et incompréhensible influence vous transmet des sorts occultes.</li>
 <li><strong>@Compendium[pf2e.classfeatures.vhW3glAaEfq2DKrw]{Angélique}</strong> la grâce divine vous accorde des sorts divins.</li>
+<li><strong>@Compendium[pf2e.classfeatures.dKTb959aCQIzSIXj]{Béni du ver}</strong> la puissance draconique sacrée vous accorde des sorts divins.</li>
 <li><strong>@Compendium[pf2e.classfeatures.w5koctOVrEcpxTIq]{Démoniaque}</strong> une corruption impure vous confère des sorts divins.</li>
 <li><strong>@Compendium[pf2e.classfeatures.o39zQMIdERWtmBSB]{Diabolique}</strong> un lien avec les diables vous octroie des sorts divins.</li>
 <li><strong>@Compendium[pf2e.classfeatures.ZHabYxSgYK0XbjhM]{Draconique}</strong> le sang des dragons vous attribue des sorts arcaniques.</li>
@@ -36,5 +37,6 @@ Nom: Lignages
 <li><strong>@Compendium[pf2e.classfeatures.7WBZ2kkhZ7JorWu2]{Mort-vivant}</strong> le contact de la mort vous confère des sorts divins.</li>
 <li><strong>@Compendium[pf2e.classfeatures.5Wxjghw7lHuCxjZz]{Nymphe}</strong> l'influence des nymphes vous confère des sorts primordiaux.</li>
 <li><strong>@Compendium[pf2e.classfeatures.uoQOm41BVdSo6pAS]{Ombre}</strong> l'influence du plan de l'Ombre vous confère des sorts occultes.</li>
+<li><strong>@Compendium[pf2e.classfeatures.TWR1wbPJuCLnGdFZ]{Phénix}</strong> l'influence du phénix vous confère des sorts primordiaux.</li>
 <li><strong>@Compendium[pf2e.classfeatures.PpzH9tJULk5ksX9w]{Psychopompe}</strong> l'influence des psychopompes vous confère des sorts divins.</li>
 </ul>
