--- a/data/classfeatures/alchemist-07-ZqwHAoIZrI1dGoqK.htm
+++ b/data/classfeatures/alchemist-07-ZqwHAoIZrI1dGoqK.htm
@@ -1,6 +1,6 @@
 Name: Perpetual Infusions
-Nom: 
-État: aucune
+Nom: Infusions perpétuelles
+État: libre
 
 ------ Description (en) ------
 <p>You have learned how to create perpetual alchemical infusions that can provide a near-infinite supply of certain simple items.</p>
@@ -9,3 +9,8 @@ Nom:
 <p>@Compendium[pf2e.classfeatures.Dug1oaVYejLmYEFt]{Perpetual Infusions (Mutagenist)}</p>
 <p>@Compendium[pf2e.classfeatures.LlZ5R50z9j8jysZL]{Perpetual Infusions (Toxicologist)}</p>
 ------ Description (fr) ------
+<p>Vous avez appris comment créer des infusions alchimiques perpétuellesqui peuvent fournir une quantité quasi infinie de certains objets simples.</p>
+<p>@Compendium[pf2e.classfeatures.DFQDtT1Van4fFEHi]{Infusions perpétuelles (Artificier)}</p>
+<p>@Compendium[pf2e.classfeatures.fzvIe6FwwCuIdnjX]{Infusions perpétuelles (Chirurgien)}</p>
+<p>@Compendium[pf2e.classfeatures.Dug1oaVYejLmYEFt]{Infusions perpétuelles (Mutagèniste)}</p>
+<p>@Compendium[pf2e.classfeatures.LlZ5R50z9j8jysZL]{Infusions perpétuelles (Toxicologiste)}</p>
