--- a/data/classfeatures/alchemist-11-MGn2wezOr3VAdO3U.htm
+++ b/data/classfeatures/alchemist-11-MGn2wezOr3VAdO3U.htm
@@ -1,6 +1,6 @@
 Name: Perpetual Potency
-Nom: 
-État: aucune
+Nom: Efficacité perpétuelle
+État: officielle
 
 ------ Description (en) ------
 <p>Your perpetual infusions improve, allowing you to use Quick Alchemy to create more powerful items with no cost. The items you can select depend on your research field and must be in your formula book.</p>
@@ -9,3 +9,8 @@ Nom:
 <p>@Compendium[pf2e.classfeatures.mZFqRLYOQEqKA8ri]{Perpetual Potency (Mutagenist)}</p>
 <p>@Compendium[pf2e.classfeatures.JOdbVu14phvdjhaY]{Perpetual Potency (Toxicologist)}</p>
 ------ Description (fr) ------
+<p>Vos infuqionq perpétuelles s'améliorent, vous permettant d'utiliser Alchimie rapide pour créer plus de puissants objets sans aucun coût. Les objets que vous pouvez choisir dépendent de votre domaine de recherche et doivent être dans votre formulaire.</p>
+<p>@Compendium[pf2e.classfeatures.8rEVg03QJ71ic3PP]{Efficacité perpétuelle (Artificier)}</p>
+<p>@Compendium[pf2e.classfeatures.VS5vkqUQu4n7E28Y]{Efficacité perpétuelle (Chirurgien)}</p>
+<p>@Compendium[pf2e.classfeatures.mZFqRLYOQEqKA8ri]{Efficacité perpétuelle (Mutagèniste)}</p>
+<p>@Compendium[pf2e.classfeatures.JOdbVu14phvdjhaY]{Efficacité perpétuelle (Toxicologiste)}</p>
