--- a/data/classfeatures/sorcerer-01-dKTb959aCQIzSIXj.htm
+++ b/data/classfeatures/sorcerer-01-dKTb959aCQIzSIXj.htm
@@ -1,6 +1,6 @@
 Name: Bloodline: Wyrmblessed
-Nom: 
-État: aucune
+Nom: Lignage : béni du Ver
+État: libre
 
 ------ Description (en) ------
 <p>You lay claim to the might of dragons, but your powers are sacred instead of arcane-born from a worship of draconic might so powerful it infused your blood or, perhaps, from a celestial or draconic power blessing one of your ancestors received.</p>
@@ -10,3 +10,9 @@ Nom:
 <p><strong>Bloodline Spells</strong> initial: @Compendium[pf2e.spells-srd.K8vvrOgW4bGakXxm]{Dragon Claws}; advanced: @Compendium[pf2e.spells-srd.JcobNl4iE9HmMYtE]{Dragon Breath}; greater: @Compendium[pf2e.spells-srd.HWJODX2zPg5cg34F]{Dragon Wings}</p>
 <p><strong>Blood Magic</strong> Draconic might carries in your voice. Either you gain a +1 status bonus to Intimidation checks for 1 round, or a target takes a –1 status penalty to Will saves for 1 round.</p>
 ------ Description (fr) ------
+<p>Vous revendiquez la puissance des dragons, mais vos pouvoirs sont sacrés plutôt qu'arcaniques - ils sont nés d'un culte de la puissance draconique si puissant qu'il a imprégné votre sang ou, peut-être, d'une bénédiction de pouvoir céleste ou draconique reçue par l'un de vos ancêtres.</p>
+<p><strong>Liste de sorts :</strong> divine</p>
+<p><strong>Compétences de lignage</strong> Intimidation, Religion</p>
+<p><strong>Sorts accordés</strong> tour de magie : @Compendium[pf2e.spells-srd.OhD2Z6rIGGD5ocZA]{Lecture d'aura}; 1er: @Compendium[pf2e.spells-srd.aAbfKn8maGjJjk2W]{Armure de mage}; 2e: @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Résistance à l'énergie}; 3e: @Compendium[pf2e.spells-srd.o6YCGx4lycsYpww4]{Rapidité}; 4e: @Compendium[pf2e.spells-srd.Mv5L4201uk8hnAtD]{Écailles réfléchissantes}; 5e: @Compendium[pf2e.spells-srd.TCk2MDwf5L5OYjFC]{Cape colorée}; 6e: @Compendium[pf2e.spells-srd.yrZA4k2VAqEP8xx7]{Répulsion}; 7e: @Compendium[pf2e.spells-srd.O6VQC1Bs4aSYDa6R]{Masque terrifiant}; 8e: @Compendium[pf2e.spells-srd.KtTGLbLG9nqMbUYL]{Inspiration divine}, 9e: @Compendium[pf2e.spells-srd.fkDeKktdmbeplYRY]{Présence écrasante}</p>
+<p><strong>Sorts de lignage</strong> initial: @Compendium[pf2e.spells-srd.K8vvrOgW4bGakXxm]{Griffes de dragon}; avancé: @Compendium[pf2e.spells-srd.JcobNl4iE9HmMYtE]{Souffle du dragon}; supérieur: @Compendium[pf2e.spells-srd.HWJODX2zPg5cg34F]{Ailes du dragon}</p>
+<p><strong>Magie du sang</strong> La puissance draconique transparaît dans votre voix. Soit vous gagnez un bonus de statut de +1 aux tests d'intimidation pendant 1 round, soit la cible subit une pénalité de statut de -1 aux jets de Volonté pendant 1 round.</p>
