--- a/data/classfeatures/sorcerer-01-2goYo6VNbwC6aKF1.htm
+++ b/data/classfeatures/sorcerer-01-2goYo6VNbwC6aKF1.htm
@@ -21,7 +21,7 @@ Nom: Lignages
 <li><strong>@Compendium[pf2e.classfeatures.7WBZ2kkhZ7JorWu2]{Undead}</strong>: The touch of death gives you divine spells.</li>
 </ul>
 ------ Description (fr) ------
-<p>Choisissez un lignage qui vous confère votre talent d’incantation. Ce choix détermine le type de sorts que vous lancez et la liste de sorts que vous utilisez pour les sélectionner, les sorts supplémentaires que vous apprenez et les compétences supplémentaires dans lesquelles vous êtes qualifié. Vous obtenez également des points de focalisation et des sorts focalisés spéciaux déterminés par votre lignage. Les lignages présentés dans cet ouvrage sont les suivants.</p>
+<p>Choisissez un lignage qui vous confère votre talent d’incantation. Ce choix détermine le type de sorts que vous lancez et la liste de sorts que vous utilisez pour les sélectionner, les sorts supplémentaires que vous apprenez et les compétences supplémentaires dans lesquelles vous êtes qualifié. Vous obtenez également des points de focalisation et des sorts focalisés spéciaux déterminés par votre lignage. Voici les différents lignages.</p>
 <ul>
 <li><strong>@Compendium[pf2e.classfeatures.3qqvnC2U8W26yae7]{Aberrant}</strong> une étrange et incompréhensible influence vous transmet des sorts occultes.</li>
 <li><strong>@Compendium[pf2e.classfeatures.vhW3glAaEfq2DKrw]{Angélique}</strong> la grâce divine vous accorde des sorts divins.</li>
