--- a/data/pathfinder-bestiary-3/3OrdGXuPXSlrLlbf.htm
+++ b/data/pathfinder-bestiary-3/3OrdGXuPXSlrLlbf.htm
@@ -1,6 +1,6 @@
 Name: Wyrwood Sneak
-Nom: 
-État: aucune
+Nom: Wyr-bois furtif
+État: libre
 
 ------ Description (en) ------
 <p>Originally created as sapient magical servants, wyrwoods reclaimed the means&nbsp;to make more of their kind from their oppressive originators; now, they fiercely&nbsp;defend their freedom and autonomy. These small, nimble living machines rely&nbsp;on their wits and speed to evade foes and gather information. Most wyrwoods&nbsp;are precise and calculating, to the point that many outsiders perceive them as&nbsp;unfeeling, but they're also highly curious and passionate about matters that pique&nbsp;their interest. Regardless of personal agenda, wyrwoods prioritize the survival of&nbsp;their people above all else, even to the detriment of others when necessary.</p>
@@ -10,3 +10,9 @@ Nom:
 <hr />
 <p>Wyrwood sneaks specialize in moving unseen&nbsp;behind enemy lines, performing reconnaissance&nbsp;and quietly eliminating threats.</p>
 ------ Description (fr) ------
+<p>Créés à l'origine comme des serviteurs magiques doté de conscience, les Wyr-bois ont réclamé à leurs oppressants créateurs les moyens de fabriquer un plus grand nombre de leur espèce ; aujourd'hui, ils défendent farouchement leur liberté et leur autonomie. Ces petites créatures artificielles vivantes et agiles comptent sur leur intelligence et leur rapidité pour échapper à leurs ennemis et recueillir des informations. La plupart des Wyr-bois sont précis et calculateurs, au point que de nombreux étrangers les perçoivent comme insensibles, mais ils sont aussi très curieux et passionnés par les sujets qui les intéressent. Indépendamment de leur agenda personnel. Les Wyrb-bois donnent la priorité à la survie de leur peuple par-dessus tout, même au détriment d'autres personnes lorsque cela s'avère nécessaire.</p>
+<p>Malgré l'obtention de leur liberté, les Wyr-bois peinent à s'établir dans l'Avistan. Certains Avistanais considèrent toujours les Wyr-bois comme les outils d'une cabale secrète, tandis que d'autres les considèrent comme des serviteurs traîtres qui se sont retournés contre leurs créateurs. Craignant pour leur sécurité, de nombreux Wyr-bois ont fui la région de la Mer Intérieure pour se créer un nouveau foyer en Arcadie. Dans la ville côtière de Segada, les Wyr-bois vivent dans une paix et sécurité relatives, mais ils préfèrent tout de même un style de vie insulaire.</p>.
+<p>Compte-tenu de leur extrême autonomie, les Wyr-bois ont appris un degré d'adaptabilité qui surpasse de loin celui des autres cultures. Lorsqu'une communauté Wyr-bois se trouve dans le besoin d'une compétence ou d'une fonction spécifique, un membre de la communauté - qu'il s'agisse d'un volontaire ou d'un membre sélectionné par la communauté - prend sur lui d'apprendre les capacités requises. Ils ne considèrent aucune tâche comme inférieure ou dévalorisante, car l'orgueil démesuré est étranger à la nature artificielle d'un Wyr-bois</p>
+<p>L'âme d'un Wyr-bois est liée à la pierre magique qui lui sert de cœur, qui survit parfois même lorsque son corps de créature artificielle périt. Un autre Wyr-bois pourrait prendre le cœur survivant d'un compagnon proche et l'incorporer dans son propre corps. Dans certains cas, plusieurs Wyr-bois pourraient vivre dans un seul corps.</p>
+<hr />
+<p>Les Wyr-bois furtifs sont spécialisés dans le déplacement sans être vus derrière les lignes ennemies, la reconnaissance et l'élimination silencieuse des menaces.</p>
