--- a/data/pathfinder-bestiary-3/5dZaPSltPYYIupeq.htm
+++ b/data/pathfinder-bestiary-3/5dZaPSltPYYIupeq.htm
@@ -1,6 +1,6 @@
 Name: Grioth Scout
-Nom: 
-État: aucune
+Nom: Éclaireur Grioth
+État: libre
 
 ------ Description (en) ------
 <p>Planets that drift out of orbit from their stars grow cold and lifeless as they float through the Dark Tapestry. Such dead worlds are coveted by the horrific creatures known as grioths, who endure the awful cold on these wandering worlds and convert them into planetary temples devoted to the dark gods of the Elder Mythos. From these bastions of frozen darkness, grioths seek out warm, living worlds to tear away from their respective suns through forbidden rituals, a process that often takes numerous generations.</p>
@@ -9,3 +9,8 @@ Nom:
 <hr />
 <p>The first grioths encountered on a new world are scouts. Typically traveling the vastness of space via one-way portals from their home worlds, grioth scouts never expect to see their homes again, as grioth leadership ensures true devotion to the colonization effort by stranding them on new worlds.</p>
 ------ Description (fr) ------
+<p>Les planètes qui dérivent hors de l'orbite de leurs étoiles deviennent froides et sans vie alors qu'elles flottent dans la Tapisserie des Ténèbres. Ces mondes morts sont convoités par les horribles créatures connues sous le nom de Grioths, qui endurent le froid affreux sur ces mondes errants et les convertissent en temples planétaires dévoués aux sombres dieux du Mythos des Anciens. Depuis ces bastions de ténèbres gelées, les Grioths recherchent des mondes chauds et vivants pour les arracher à leurs soleils respectifs par le biais de rituels interdits, un processus qui prend souvent de nombreuses générations.</p>
+<p>Un seul cultiste dirige généralement un groupe d'éclaireurs Grioths, et le groupe cherche un endroit désaffecté ou oublié en marge des établissements ruraux comme point d'invasion initial. Sur plusieurs générations, une colonie de Grioths devient puissante et conquiert les cultures environnantes, et finalement, de puissants Grioths descendent des étoiles pour entamer l'étape suivante de la conquête planétaire.</p> 
+<p>Les Grioths parlent une langue composée de trilles et de clics. Bien que capables de parler d'autres langues, ils le font avec des voix sèches et rauques. Comme les Grioths ont des ailes, des queues frétillantes et des visages de chauve-souris à quatre yeux, de nombreuses cultures les associent par erreur aux plans extérieurs maléfiques, mais ils appartiennent bel et bien à cette réalité.</p>
+<hr />
+<p>Les premiers Grioths rencontrés sur un nouveau monde sont des éclaireurs. Voyageant généralement dans l'immensité de l'espace via des portails à sens unique depuis leurs mondes d'origine, les éclaireurs Grioths ne s'attendent jamais à revoir leurs foyers, car les dirigeants Grioths s'assurent d'un véritable dévouement à l'effort de colonisation en les faisant échouer sur les nouveaux mondes.</p>
