dons changés et traduits

--- a/data/feats/ancestry-01-ED58GzldWb82yc2q.htm
+++ b/data/feats/ancestry-01-ED58GzldWb82yc2q.htm
@@ -2,14 +2,12 @@ Name: Animal Accomplice
 Nom: Complice animal
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You build a rapport with an animal, which becomes magically bonded to you.
 Avantage: Vous obtenez un familier.
------- Benefits and spoiler ----
-Avantage: Vous obtenez un familier.
+
 ------ Description (en) ------
 <p>You build a rapport with an animal, which becomes magically bonded to you. You gain a familiar. The type of animal is up to you, but most gnomes choose animals with a burrow Speed.</p>
 ------ Description (fr) ------
