--- a/data/pathfinder-bestiary-3/YO3aTYRNGXWiSRal.htm
+++ b/data/pathfinder-bestiary-3/YO3aTYRNGXWiSRal.htm
@@ -1,6 +1,6 @@
 Name: Sorcerous Skull Swarm
-Nom: 
-État: aucune
+Nom: Nuée de crânes sorciers
+État: libre
 
 ------ Description (en) ------
 <p>A skull swarm is composed of reanimated masses of craniums and jawbones, forming a terrifying avalanche of undead fury. Most skull swarms are mindless, though some retain a vestige of wit, awareness, and even magical talents from life, culminating in a highly intelligent swarm mind.</p>
@@ -8,3 +8,7 @@ Nom:
 <p>The act of creating a demilich sometimes goes horribly awry, leaving behind a shattered remnant of a once-mighty spellcaster constantly leaking eldritch energies. The ruined spirit animates a cloud of debased copies of itself, glittering with cracked crystals in crude imitation, and it hungers constantly for the magical energies denied it in its corrupted immortality.</p>
 <p>Some of the spellcaster's personality remains in the swarm, albeit usually unnaturally split between the skulls. As a consequence, the skulls argue among themselves as warring parts of the personality clamor to be heard, resulting in the swarm's fractious, inconstant attitude.</p>
 ------ Description (fr) ------
+<p>Une nuée de crânes est composé de masses réanimées de crânes et de mâchoires, formant une avalanche furieuse de morts-vivants terrifiants. La plupart des nuées de crânes sont dépourvus d'esprit, bien que certains conservent de leur vie un vestige d'esprit, de conscience et même de talents magiques, pour aboutir à un esprit d'essaim très intelligent.</p>
+<hr />
+<p>L'acte de création d'un demi-liche tourne parfois terriblement mal, laissant derrière lui un vestige brisé d'un lanceur de sorts autrefois puissant, qui laisse constamment échapper des énergies mystiques. L'esprit ruiné anime une nuée de copies avilies de lui-même, scintillant de cristaux fissurés en une imitation grossière, et il a constamment faim des énergies magiques qui lui ont été refusées dans son immortalité corrompue.</p>
+<p>Une partie de la personnalité du lanceur de sorts reste dans l'essaim, bien qu'elle soit généralement anormalement répartie entre les crânes. En conséquence, les crânes se disputent entre eux, les parties belligérantes de la personnalité réclamant d'être entendues, ce qui donne à l'essaim une attitude fracassante et inconstante.</p> 
