dons d'ascendance de niveau 1

--- a/data/feats/ancestry-01-yJ8Ez5dEscIk1xr5.htm
+++ b/data/feats/ancestry-01-yJ8Ez5dEscIk1xr5.htm
@@ -2,14 +2,12 @@ Name: First World Magic
 Nom: Magie du Premier monde
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your connection to the First World grants you a primal innate spell, much like those of the fey.
 Avantage: Vous obtenez un tour de magie primordiale.
------- Benefits and spoiler ----
-Avantage: Vous obtenez un tour de magie primordiale.
+
 ------ Description (en) ------
 <p>Your connection to the First World grants you a primal innate spell, much like those of the fey. Choose one cantrip from the primal spell list. You can cast this spell as a primal innate spell at will. A cantrip is heightened to a spell level equal to half your level rounded up.</p>
 ------ Description (fr) ------
