--- a/data/feats/ancestry-01-XKDFgBEtFdEzCz8X.htm
+++ b/data/feats/ancestry-01-XKDFgBEtFdEzCz8X.htm
@@ -2,14 +2,12 @@ Name: Intuitive Crafting
 Nom: Artisanat intuitif
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your affinity with process and order makes you a natural artisan.
 Avantage: Vous êtes qualifié en Artisanat et obtenez le don de compétence Artisanat Spécialisé.
------- Benefits and spoiler ----
-Avantage: Vous êtes qualifié en Artisanat et obtenez le don de compétence Artisanat Spécialisé.
+
 ------ Description (en) ------
 <p>Your affinity with process and order makes you a natural artisan. You gain the trained proficiency rank in Crafting (or another skill of your choice, if you’re already trained in Crafting). You gain the Specialty Crafting skill feat in a specialty of your choice.</p>
 <hr />
