--- a/data/feats/ancestry-01-Y8sKn8NH1wC7Mrui.htm
+++ b/data/feats/ancestry-01-Y8sKn8NH1wC7Mrui.htm
@@ -13,4 +13,4 @@ Avantage: Vous obtenez une attaque à mains nues de crocs qui inflige 1d6 dégâ
 <p>You gain a fangs unarmed attack that deals <a class="inline-roll roll" data-mode="roll" data-flavor="piercing" data-formula="1d6" title="piercing"><i class="fas fa-dice-d20"></i> 1d6</a> piercing damage. Your fangs are in the brawling group and have the grapple and unarmed traits.</p>
 ------ Description (fr) ------
 <p>Vos incisives ont grandi en formant de véritables crocs : longs, pointus et idéaux pour drainer le sang.</p>
-<p>Vous obtenez une attaque à mains nues de crocs qui inflige 1d6 dégâts perforants. Vos crocs sont dans le groupe pugilat et ont les traits à mains nues et saisir.</p>
+<p>Vous obtenez une attaque à mains nues de crocs qui inflige <a class="inline-roll roll" data-mode="roll" data-flavor="perforant" data-formula="1d6" title="perforant"><i class="fas fa-dice-d20"></i> 1d6</a> dégâts perforants. Vos crocs sont dans le groupe pugilat et ont les traits à mains nues et saisir.</p>
