--- a/data/feats/ancestry-01-ZUjjUj9lVGOKrJbp.htm
+++ b/data/feats/ancestry-01-ZUjjUj9lVGOKrJbp.htm
@@ -2,14 +2,12 @@ Name: Idyllkin
 Nom: Type idyllique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your wild, unique features betray your agathion birthright.
 Avantage: Vous êtes qualifié en Nature, connaissez le Sylvestre et obtenez le don Médecine naturelle.
------- Benefits and spoiler ----
-Avantage: Vous êtes qualifié en Nature, connaissez le Sylvestre et obtenez le don Médecine naturelle.
+
 ------ Description (en) ------
 <p>Your wild, unique features betray your agathion birthright. Serene celestials from the plane of Nirvana, agathions seek the peaceful path, ensuring a better world for all to coexist. Your halcyon demeanor leads you to search for peaceful resolution to conflict.</p>
 <p>You gain the trained proficiency rank in Nature. If you would automatically become trained in Nature (from your background or class, for example), you instead become trained in a skill of your choice. You know the Sylvan language and gain the @Compendium[pf2e.feats-srd.WC4xLBGmBsdOdHWu]{Natural Medicine} skill feat.</p>
