--- a/data/feats/ancestry-01-ydgCsYsgqSkFWEDK.htm
+++ b/data/feats/ancestry-01-ydgCsYsgqSkFWEDK.htm
@@ -2,14 +2,12 @@ Name: Angelkin
 Nom: Type angélique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You descend from an angel—a winged messenger from Nirvana or one of the other celestial realms—which gives you a knack for cultures and languages.
 Avantage: Vous êtes qualifié en Société, connaissez le Céleste et obtenez le don Polyglotte.
------- Benefits and spoiler ----
-Avantage: Vous êtes qualifié en Société, connaissez le Céleste et obtenez le don Polyglotte.
+
 ------ Description (en) ------
 <p>You descend from an angel-a winged messenger from Nirvana or one of the other celestial realms-which gives you a knack for cultures and languages.</p>
 <p>You gain the trained proficiency rank in Society. If you would automatically become trained in Society (from your background or class, for example), you instead become trained in a skill of your choice. You know the Celestial language, and you gain the @Compendium[pf2e.feats-srd.P9HCz0uR6xPHuw72]{Multilingual} skill feat.</p>
