--- a/data/feats/ancestry-01-95amaXDoWKxdIXqI.htm
+++ b/data/feats/ancestry-01-95amaXDoWKxdIXqI.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You have cultivated your exoskeleton’s form for close combat, using knots, whorls, and reinforced branches. When you select this feat, you gain a branch unarmed attack that deals 1d6 bludgeoning damage and has the backswing trait. This unarmed attacks is in the brawling weapon group and uses one of your hands.</p>
 <hr />
