--- a/data/feats/ancestry-01-KKUDZUbX3nDdME4K.htm
+++ b/data/feats/ancestry-01-KKUDZUbX3nDdME4K.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You use your many eyes to look in all directions at once, making you extremely observant for a short period of time. You gain all-around vision until the start of your next turn. This lets you see in all directions and prevents you from being flanked.</p>
 ------ Description (fr) ------
