--- a/data/feats/ancestry-05-M0B0rt6rk5MkHiBN.htm
+++ b/data/feats/ancestry-05-M0B0rt6rk5MkHiBN.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Mastery of your shapeshifting lets you combine the best features of your humanoid and spider forms. When using your Change Shape ability, you can assume a bipedal hybrid shape. This form gains all the benefits of your spider shape as well as the ability to use items and take manipulate actions just as easily as your human shape.</p>
 ------ Description (fr) ------
