--- a/data/feats/ancestry-05-NPATYCDg2cryH0Ya.htm
+++ b/data/feats/ancestry-05-NPATYCDg2cryH0Ya.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You have come to know conrasu weapons as you know yourself. Whenever you critically hit using a @Compendium[pf2e.equipment-srd.e4NwsnPnpQKbDZ9F]{Composite Shortbow}, @Compendium[pf2e.equipment-srd.vlnzTSsRmWeSkt9O]{Glaive}, @Compendium[pf2e.equipment-srd.aXuJh4i8HqSu6NYV]{Longspear}, @Compendium[pf2e.equipment-srd.LJdbVTOZog39EEbi]{Longsword}, @Compendium[pf2e.equipment-srd.hIgqLgH3YcLZBeoT]{Shortbow}, @Compendium[pf2e.equipment-srd.tOhoGvmCMw4JpWcS]{Spear}, or a conrasu weapon(@Compendium[pf2e.equipment-srd.7WRzbBTOCsJx5f7L]{Buugeng}), you apply the weapon’s critical specialization effect.</p>
 ------ Description (fr) ------
