--- a/data/feats/ancestry-05-PWKFdaNghx1YMKlA.htm
+++ b/data/feats/ancestry-05-PWKFdaNghx1YMKlA.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Your fangs are exceptionally painful. Whenever you score a critical hit with your fangs unarmed attack, you apply the unarmed attack's critical specialization effect.</p>
 ------ Description (fr) ------
