--- a/data/feats/ancestry-05-YndH82FX7KLawNBW.htm
+++ b/data/feats/ancestry-05-YndH82FX7KLawNBW.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Escaping your nets is no simple task. The Athletics DC to Force Open or Escape your nets increases from 16 to 18. After a creature you grabbed with a net Escapes or Forces Open the net, stray strands of the net cling to the creature, causing them to remain @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} until the beginning of their next turn.</p>
 ------ Description (fr) ------
