--- a/data/feats/ancestry-05-ZwvSiuFFsyNGJiB3.htm
+++ b/data/feats/ancestry-05-ZwvSiuFFsyNGJiB3.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You have learned how to master the power contained within sunlight, just like the trees that form your body. Your Sunlight Healing recovers 1d8 Hit Points per level.</p>
 ------ Description (fr) ------
