--- a/data/feats/ancestry-05-ehPnY1PuPK7EXkYc.htm
+++ b/data/feats/ancestry-05-ehPnY1PuPK7EXkYc.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Access</strong> Matanji ethnicity</p>
 <p><strong>Prerequisites</strong> tusks unarmed attack</p>
