--- a/data/feats/ancestry-09-RxA1PdgGbijkieJD.htm
+++ b/data/feats/ancestry-09-RxA1PdgGbijkieJD.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> you are adjacent to at least two enemies</p>
 <hr />
