--- a/data/feats/ancestry-09-qAdlJvAHkWBisDJ0.htm
+++ b/data/feats/ancestry-09-qAdlJvAHkWBisDJ0.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Your patron aeon graced you with powers of protection. You can cast @Compendium[pf2e.spells-srd.Fr58LDSrbndgld9n]{Resist Energy} and @Compendium[pf2e.spells-srd.d7Lwx6KAs47MtF0q]{Shield Other} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
