--- a/data/feats/ancestry-13-Gh0rJNsdxBacK9b8.htm
+++ b/data/feats/ancestry-13-Gh0rJNsdxBacK9b8.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Whenever you gain a class feature that grants you expert or greater proficiency in certain weapons, you also gain that proficiency for @Compendium[pf2e.equipment-srd.e4NwsnPnpQKbDZ9F]{Composite Shortbow}, @Compendium[pf2e.equipment-srd.vlnzTSsRmWeSkt9O]{Glaive}, @Compendium[pf2e.equipment-srd.aXuJh4i8HqSu6NYV]{Longspear}, @Compendium[pf2e.equipment-srd.LJdbVTOZog39EEbi]{Longsword}, @Compendium[pf2e.equipment-srd.hIgqLgH3YcLZBeoT]{Shortbow}, @Compendium[pf2e.equipment-srd.tOhoGvmCMw4JpWcS]{Spear}, and all conrasu weapons(@Compendium[pf2e.equipment-srd.7WRzbBTOCsJx5f7L]{Buugeng}) in which you are trained.</p>
 ------ Description (fr) ------
