--- a/data/feats/ancestry-13-JAl4t2KINE8nI8KY.htm
+++ b/data/feats/ancestry-13-JAl4t2KINE8nI8KY.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You can alter your exoskeleton’s size. You constantly gain the effects of @Compendium[pf2e.spells-srd.wzctak6BxOW8xvFV]{Enlarge}. You can dismiss or resume these effects as an action, which has the concentrate trait.</p>
 <p>@Compendium[pf2e.spell-effects.sPCWrhUHqlbGhYSD]{Spell Effect: Enlarge}</p>
