--- a/data/feats/ancestry-13-LxAEF9VPwUVttA0F.htm
+++ b/data/feats/ancestry-13-LxAEF9VPwUVttA0F.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Subterranean life taught you to swim through the ground like water. You gain a burrow Speed of 10 feet through loose soil or dirt.</p>
 ------ Description (fr) ------
