--- a/data/feats/ancestry-13-M8pDuRo6tO0Kok9z.htm
+++ b/data/feats/ancestry-13-M8pDuRo6tO0Kok9z.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You can call forth an invisible eye to let you peek on secrets. Once per day, you can cast @Compendium[pf2e.spells-srd.Ek5XI0aEdZhBgm21]{Prying Eye} as an innate occult spell.</p>
 ------ Description (fr) ------
