--- a/data/feats/ancestry-17-hZUFP1NPwdGMzs1y.htm
+++ b/data/feats/ancestry-17-hZUFP1NPwdGMzs1y.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Your connection to the sun has become an unbreakable bond. You don’t become temporarily immune to the effects of your Sunlight Healing, and instead of rolling to recover Hit Points, you gain the maximum number of HP possible (for example, 64 HP instead of 8d8).</p>
 ------ Description (fr) ------
