--- a/data/feats/archetype-10-muDbZAyrE1ObyuTL.htm
+++ b/data/feats/archetype-10-muDbZAyrE1ObyuTL.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You are skilled at hiding from your foes and targets among the common populace. You gain the @Compendium[pf2e.feats-srd.e4KB4pSkx2lDBNw3]{Quick Disguise} and @Compendium[pf2e.feats-srd.RiuZT3H4QZIIEQXJ]{Slippery Secrets} skill feats. In addition, while in a crowd, you can @Compendium[pf2e.actionspf2e.AJstokjdG6iDjVjE]{Impersonate} a nondescript member of the crowd as a three action activity (one action if you are legendary in Deception)</p>
 ------ Description (fr) ------
