--- a/data/feats/class-01-b09B0XLNAiFP3gFT.htm
+++ b/data/feats/class-01-b09B0XLNAiFP3gFT.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature casts a spell that you have in your repertoire.</p>
 <p><strong>Requirements</strong> You have an unexpended spell slot you could use to cast the triggering spell.</p>
