--- a/data/feats/class-02-QkP007ESTWtw7UQG.htm
+++ b/data/feats/class-02-QkP007ESTWtw7UQG.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>A greater understanding of your magic broadens your range of simple spells.</p>
 <p>Add two additional cantrips from your spell list to your repetoire.</p>
