--- a/data/feats/class-20-1sD5Gu8jQL09Yz2j.htm
+++ b/data/feats/class-20-1sD5Gu8jQL09Yz2j.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a weapon that deals slashing damage or have an unarmed Strike that deals slashing damage.</p>
 <p>You destroy the space between you and your targets, allowing you to strike with your melee weapons at great range. Make a melee Strike with the required weapon or unarmed attack. The attack gains an 80-foot reach for this Strike.</p>
