--- a/data/feats/class-20-OYrcbyaV3v8ycksj.htm
+++ b/data/feats/class-20-OYrcbyaV3v8ycksj.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You remember the revelry of the Night Parade and call them to your aid in a riotous display. You Perform and cast 8th-level @Compendium[pf2e.spells-srd.tFKJCPvOQZxKq6ON]{Mad Monkeys} three times, except that the spell calls various apparitions such as dancing tsukumogami or drinking oni rather than monkeys. Each casting can produce a different kind of mischief. You can Sustain all three Spells each round using a single Perform action.</p>
 ------ Description (fr) ------
