--- a/data/feats/ancestry-05-73JyUrJnH3nOQJM5.htm
+++ b/data/feats/ancestry-05-73JyUrJnH3nOQJM5.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You tap into aeon knowledge. You gain the @Compendium[pf2e.feats-srd.9jGaBxLUtevZYcZO]{Untrained Improvisation} general feat. In addition, you can attempt skill actions that normally require you to be trained, even if you are untrained.</p>
 ------ Description (fr) ------
