--- a/data/feats/ancestry-05-qKNo7Sr1dtVqhhAa.htm
+++ b/data/feats/ancestry-05-qKNo7Sr1dtVqhhAa.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Your have a love for extreme heat. You gain resistance 4 to fire. You treat environmental heat effects as if they were one step less extreme (incredible heat becomes extreme, extreme heat becomes severe, and so on).</p>
 ------ Description (fr) ------
