--- a/data/feats/ancestry-05-qkXRucQCLLS3VoMa.htm
+++ b/data/feats/ancestry-05-qkXRucQCLLS3VoMa.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>The shared bond between you and your allies allows you to act on their behalf. During your daily preparations, you can perform a simple ritual with up to five willing Small or Medium humanoids, where participants exchange minor tokens of personal significance. As long as you hold onto a participant's token, you can assume their form with your Change Shape ability, gaining a +4 status bonus to Deception checks to pass as that person and adding your level to the check even if you’re untrained. You lose access to a participant’s form if they’re not carrying your token or if you use the ritual again.</p>
 ------ Description (fr) ------
