--- a/data/feats/ancestry-09-InTchkd50pzQok3f.htm
+++ b/data/feats/ancestry-09-InTchkd50pzQok3f.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Through the careful cultivation of highly sensitive hairs, you’ve developed the ability to sense creatures without seeing them. You gain imprecise tremorsense at a range of 15 feet. When you and a creature are both touching the same anchored, threadlike object (such as a rope, webbing, or wire), your imprecise tremorsense can sense that creature at a range of 60 feet.</p>
 ------ Description (fr) ------
