--- a/data/feats/ancestry-09-ZGnmky2B3v1pbPDA.htm
+++ b/data/feats/ancestry-09-ZGnmky2B3v1pbPDA.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Your eight legs serve you well when climbing walls and webs alike. You gain a climb speed of 25 feet in your spider shape.</p>
 ------ Description (fr) ------
