--- a/data/feats/ancestry-09-mU8vTzrWX9fIlG0d.htm
+++ b/data/feats/ancestry-09-mU8vTzrWX9fIlG0d.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You carry the bones of your ancestors with you, and you can ask them for counsel. You can cast @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{Augury} twice per day as a 2nd-level occult innate spell.</p>
 ------ Description (fr) ------
