--- a/data/feats/ancestry-09-nYSSdczKdRj7pdW6.htm
+++ b/data/feats/ancestry-09-nYSSdczKdRj7pdW6.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Your patron aeon has allowed you to call upon their gifts to serve their ends. You can cast @Compendium[pf2e.spells-srd.41TZEjhO6D1nWw2X]{Augury} and @Compendium[pf2e.spells-srd.b515AZlB0sridKSq]{Calm Emotions} each once per day as 2nd-level divine innate spells.</p>
 ------ Description (fr) ------
