--- a/data/feats/ancestry-13-6GGPTYwljGeGL2B3.htm
+++ b/data/feats/ancestry-13-6GGPTYwljGeGL2B3.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You fight with effortless expertise with grippli weapons. Whenever you gain a class feature that grants you expert or greater proficiency in a given weapon or weapons, you also gain that proficiency in the @Compendium[pf2e.equipment-srd.FPwsiGqMCNPLHmjX]{Blowgun}, @Compendium[pf2e.equipment-srd.LGgvev6AV0So8tP9]{Hatchet}, @Compendium[pf2e.equipment-srd.H74vYwHJ8XT4qOPI]{Scythe}, @Compendium[pf2e.equipment-srd.hIgqLgH3YcLZBeoT]{Shortbow}, and @Compendium[pf2e.equipment-srd.e4NwsnPnpQKbDZ9F]{Composite Shortbow}, or grippli weapons in which you are trained.</p>
 ------ Description (fr) ------
