--- a/data/feats/ancestry-13-CAfrSLaDM0OBaNtp.htm
+++ b/data/feats/ancestry-13-CAfrSLaDM0OBaNtp.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You notice things that others can’t see at all. While you’re adjacent to an undetected creature of your level or lower, it is instead only hidden from you. You only need a successful DC 5 flat check to target a @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Hidden} creature.</p>
 ------ Description (fr) ------
