--- a/data/feats/ancestry-13-VXAIElMlMnVvz3x5.htm
+++ b/data/feats/ancestry-13-VXAIElMlMnVvz3x5.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per 10 minutes</p>
 <hr />
