--- a/data/feats/ancestry-13-cpsyKarYRHiOF0Nd.htm
+++ b/data/feats/ancestry-13-cpsyKarYRHiOF0Nd.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Even magical means have a hard time prying information from you. You gain @Compendium[pf2e.spells-srd.EoKBlgf6Smt8opaU]{Nondetection} as an innate occult spell once per day, which can only be cast on yourself and is automatically heightened to half your level rounded up.</p>
 ------ Description (fr) ------
