--- a/data/feats/ancestry-13-ytgmam8COVq8B7Do.htm
+++ b/data/feats/ancestry-13-ytgmam8COVq8B7Do.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You transform into an enormous otherworldly hyena. You can cast @Compendium[pf2e.spells-srd.wp09USMB3GIW1qbp]{Animal Form} (canine form only) once per day as a 5th-level occult innate spell.</p>
 ------ Description (fr) ------
