--- a/data/feats/ancestry-17-IOlvpmeIwlk0IACr.htm
+++ b/data/feats/ancestry-17-IOlvpmeIwlk0IACr.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Using your ancestors' bones, you manifest their spirits around you in a fossilized form, terrifying your foes. You can cast @Compendium[pf2e.spells-srd.O6VQC1Bs4aSYDa6R]{Mask of Terror} on yourself as a primal innate spell once per day. When you do, you appear as a skeletal lizardfolk ancestor, twisted in a way that inspires the deepest fears of those who observe you.</p>
 ------ Description (fr) ------
