--- a/data/feats/bonus-00-Zr1sspa9Q16V8uZV.htm
+++ b/data/feats/bonus-00-Zr1sspa9Q16V8uZV.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You are an endless well of knowledge and can remember several vital pieces of information at once. You can cast @Compendium[pf2e.spells-srd.ZYoC630tNGutgbE0]{Hypercognition} as an innate occult spell once per day.</p>
 ------ Description (fr) ------
