--- a/data/feats/bonus-00-rWiddU8fHl0TraoN.htm
+++ b/data/feats/bonus-00-rWiddU8fHl0TraoN.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>You paid attention to your senior hunters to learn their tricks. You gain the trained proficiency rank in Stealth and Survival. If you would automatically become trained in one of those skills (from your background or class, for example), you instead become trained in a skill of your choice. You also become trained in Gnoll Lore.</p>
 <hr />
