--- a/data/feats/bonus-17-MzdoJWpqyMmMDI1F.htm
+++ b/data/feats/bonus-17-MzdoJWpqyMmMDI1F.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
 <hr />
