--- a/data/feats/class-01-M8tiauf4tNg1X9B6.htm
+++ b/data/feats/class-01-M8tiauf4tNg1X9B6.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature Casts a Spell that you have prepared</p>
 <hr />
