--- a/data/feats/class-14-q2t5qfgQHFJbbV8d.htm
+++ b/data/feats/class-14-q2t5qfgQHFJbbV8d.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Access</strong> member of the Magaambya</p>
 <p><strong>Requirements</strong> You have an active spell that affects an area and you are within the spell's range.</p>
