--- a/data/feats/class-18-LLCf2xPXA7FVQT1D.htm
+++ b/data/feats/class-18-LLCf2xPXA7FVQT1D.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p>Focusing the powers of your ki to augment your blows, you stretch and lengthen your body in ways that defy logic. Your unarmed attacks gain the reach trait.</p>
 ------ Description (fr) ------
