--- a/data/feats/class-18-W1CthcTSbsmOo7lP.htm
+++ b/data/feats/class-18-W1CthcTSbsmOo7lP.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a ranged weapon with the volley trait and reload 0</p>
 <hr />
