--- a/data/feats/class-20-9Slu8lSOYnDtKsIb.htm
+++ b/data/feats/class-20-9Slu8lSOYnDtKsIb.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
 <p><strong>Trigger</strong> You would be reduced to 0 Hit Points.</p>
