--- a/data/feats/class-20-EP8kaXNmrMfxOFAf.htm
+++ b/data/feats/class-20-EP8kaXNmrMfxOFAf.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within your aura is targeted by a ranged attack or a creature moves through your aura.</p>
 <p><strong>Requirements</strong> You have at least one aura from a champion feat or feature.</p>
