--- a/data/feats/class-20-OliKxFIqzky2o6vk.htm
+++ b/data/feats/class-20-OliKxFIqzky2o6vk.htm
@@ -4,6 +4,10 @@ PrereqEN:
 PrereqFR: 
 État: aucune
 
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: 
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> The ally hasn't acted in the current combat.</p>
 <p><strong>Trigger</strong> An ally's turn begins.</p>
